LL style characters page

--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -14,6 +14,122 @@
 <body>
     {% include header.html %}
 
+    <div class="fish_ll" style="margin-top: 80px;">
+      <div class="rounded_image_container">
+      <div class="rounded_image" id="rounded_octopus">
+      </div>
+    </div>
+      <div class="fish_text">
+
+        <div class="fish_name_2">
+          Octopus
+        </div>
+        <div class="fish_desc_2">
+          Designer at Foogle
+        </div>
+        <div class="fish_desc_3">
+          Foogle &bull; Boat Island School of Design
+        </div>
+        <div class="fish_desc_3" style="margin-bottom: 45px;">
+          Sanfran Jose, Sealicon Valley &bull; 500+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="fish_ll" style="margin-top: 80px;">
+      <div class="rounded_image_container">
+      <div class="rounded_image" id="rounded_dolphin">
+      </div>
+    </div>
+      <div class="fish_text">
+
+        <div class="fish_name_2">
+          Dolphin
+        </div>
+        <div class="fish_desc_2">
+          Software Engineer at Foogle
+        </div>
+        <div class="fish_desc_3">
+          Foogle &bull; Carnegie Jelly University
+        </div>
+        <div class="fish_desc_3" style="margin-bottom: 45px;">
+          Fountain View, Sealicon Valley &bull; 500+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="fish_ll" style="margin-top: 80px;">
+      <div class="rounded_image_container">
+      <div class="rounded_image" id="rounded_narwhal">
+      </div>
+    </div>
+      <div class="fish_text">
+
+        <div class="fish_name_2">
+          Narwhal
+        </div>
+        <div class="fish_desc_2">
+          Cofounder, CEO at Fintechify.ai
+        </div>
+        <div class="fish_desc_3">
+          Fintechify.ai &bull; Carnegie Jelly University
+        </div>
+        <div class="fish_desc_3" style="margin-bottom: 45px;">
+          Sanfran Jose, Sealicon Valley &bull; 500+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="fish_ll" style="margin-top: 80px;">
+      <div class="rounded_image_container">
+      <div class="rounded_image" id="rounded_shark">
+      </div>
+    </div>
+      <div class="fish_text">
+
+        <div class="fish_name_2">
+          Shark
+        </div>
+        <div class="fish_desc_2">
+          Cofounder, General Partner at Coral Capital
+        </div>
+        <div class="fish_desc_3">
+          Coral Capital &bull; Harbour Business School
+        </div>
+        <div class="fish_desc_3" style="margin-bottom: 45px;">
+          Palo Orca, Sealicon Valley &bull; 5000+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="fish_ll" style="margin-top: 80px;margin-bottom:50px;">
+      <div class="rounded_image_container">
+      <div class="rounded_image" id="rounded_bubble">
+      </div>
+    </div>
+      <div class="fish_text">
+
+        <div class="fish_name_2">
+          Bubble
+        </div>
+        <div class="fish_desc_2">
+          Intern at Foogle
+        </div>
+        <div class="fish_desc_3">
+          Foogle &bull; Carnegie Jelly University
+        </div>
+        <div class="fish_desc_3" style="margin-bottom: 45px;">
+          Fountain View, Sealicon Valley &bull; 200+
+        </div>
+
+      </div>
+    </div>
+
+<!--
     <div class="fish_container2">
 
       <div class="fish_item">
@@ -129,7 +245,8 @@
 
               </div>
     </div>
-    <!--
+  -->
+<!--
 
     <div class="fish_container">
         <div class="fish_img" id="octopus">
@@ -164,6 +281,7 @@
       </div>
     </div>
   -->
+
     {% include footer.html %}
 </body>
 
