--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,9 +19,11 @@
                 Hi there!
             </div>
             <div class="about_content">
-                Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-                <br/> <br/>Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit
-                quaestio delicatissimi no pri.
+                Welcome to Sealicon Valley! Here we can dive into this ordinary yet exciting world together, by following the life journey of our FINtastic friends. <br/><br/>
+                The original stories and drawings of Sealicon Valley are created by Mita and Ann. We are engineer and designer at Google. The place we live in is a lot like Sealicon Valley,
+                where we swim from far away here, to dream big together, help each other, learn from failure, and enjoy the fast WiFi and free tshirts.
+                <br/><br/>
+                Wanna say hi?
             </div>
             <div class="about_email">
                 sealiconvalley@gmail.com
