--- a/assets/main.css
+++ b/assets/main.css
@@ -804,12 +804,14 @@ body {
     opacity: 0.5;
 }
 
+
 .fish_img:hover {
     transform: scale(1.2);
     transition: transform;
     transition-duration: 1000;
     opacity: 1.0;
 }
+
 
 #dolphin {
     margin-right: 20px;
@@ -921,6 +923,106 @@ body {
     -ms-box-sizing: border-box;
     /** add this **/
 }
+
+.fish_ll {
+  position: relative;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 150px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.image_circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 4px solid rgb(65, 176, 247);;
+}
+
+.rounded_image_container {
+  width: 100%;
+  position: absolute;
+  top: -100px;
+  text-align: center;
+}
+.rounded_image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+
+}
+
+#rounded_octopus {
+background-image: url("octopus_icon.png");
+border: 8px solid #fce4d9;
+background-size: cover;
+}
+
+#rounded_dolphin {
+background-image: url("dolphin_icon.png");
+border: 8px solid #c3dbea;
+background-size: cover;
+}
+
+#rounded_narwhal {
+background-image: url("narwhal_icon.png");
+border: 8px solid #f9b9c8;
+background-size: cover;
+}
+
+#rounded_bubble {
+background-image: url("bubble_icon.png");
+border: 8px solid #bccdef;
+background-size: cover;
+}
+
+#rounded_shark {
+background-image: url("shark_icon.png");
+background-size: cover;
+border: 8px solid #abb6d9;
+}
+.fish_text {
+  width: 100%;
+  border: 1px solid #e8ecef;
+  border-radius: 2px;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
+  padding-top: 130px;
+}
+
+.fish_name_2 {
+    display: inline-block;
+    font-size: 26px;
+    text-transform: uppercase;
+    color: #5b5b5b;
+    letter-spacing: 2px;
+}
+
+.fish_title_2 {
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 15px;
+    color: #8e8e8e;
+}
+
+.fish_desc_2 {
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    letter-spacing: 1px;
+}
+
+.fish_desc_3 {
+  color: #8e8e8e;
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    letter-spacing: 1px;
+}
+
+
 
 
 /*
