--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -4,283 +4,162 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-    <!--<script src="{{base}}/assets/carousel.js"></script>-->
     {% include head.html %}
-    <script>
-    </script>
 </head>
 
 
 <body>
     {% include header.html %}
-
     <div class="fish_ll" style="margin-top: 80px;">
-      <div class="rounded_image_container">
-      <div class="rounded_image" id="rounded_octopus">
-      </div>
-    </div>
-      <div class="fish_text">
+        <div class="rounded_image_container">
 
-        <div class="fish_name_2">
-          Octopus
-        </div>
-        <div class="fish_desc_2">
-          Designer at Foogle
-        </div>
-        <div class="fish_desc_3">
-          Foogle &bull; Boat Island School of Design
-        </div>
-        <div class="fish_desc_3" style="margin-bottom: 45px;">
-          Sanfran Jose, Sealicon Valley &bull; 500+
-        </div>
+            <div class="flip-container">
+                <div class="flipper" onclick="this.classList.toggle('flipped')">
+                    <div class="rounded_image front" id="rounded_octopus">
+                    </div>
+                    <div class="rounded_image back" id="rounded_octopus_back">
+                    </div>
+                </div>
+            </div>
 
-      </div>
-    </div>
+        </div>
+        <div class="fish_text">
 
-    <div class="fish_ll" style="margin-top: 80px;">
-      <div class="rounded_image_container">
-      <div class="rounded_image" id="rounded_dolphin">
-      </div>
-    </div>
-      <div class="fish_text">
+            <div class="fish_name_2">
+                Octopus
+            </div>
+            <div class="fish_desc_2">
+                Designer at Foogle
+            </div>
+            <div class="fish_desc_3">
+                Foogle &bull; Boat Island School of Design
+            </div>
+            <div class="fish_desc_3" style="margin-bottom: 45px;">
+                Sanfran Jose, Sealicon Valley &bull; 500+
+            </div>
 
-        <div class="fish_name_2">
-          Dolphin
         </div>
-        <div class="fish_desc_2">
-          Software Engineer at Foogle
-        </div>
-        <div class="fish_desc_3">
-          Foogle &bull; Carnegie Jelly University
-        </div>
-        <div class="fish_desc_3" style="margin-bottom: 45px;">
-          Fountain View, Sealicon Valley &bull; 500+
-        </div>
-
-      </div>
     </div>
 
     <div class="fish_ll" style="margin-top: 80px;">
-      <div class="rounded_image_container">
-      <div class="rounded_image" id="rounded_narwhal">
-      </div>
-    </div>
-      <div class="fish_text">
+        <div class="rounded_image_container">
 
-        <div class="fish_name_2">
-          Narwhal
+            <div class="flip-container">
+                <div class="flipper" onclick="this.classList.toggle('flipped')">
+                    <div class="rounded_image front" id="rounded_dolphin">
+                    </div>
+                    <div class="rounded_image back" id="rounded_dolphin_back">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="fish_desc_2">
-          Cofounder, CEO at Fintechify.ai
-        </div>
-        <div class="fish_desc_3">
-          Fintechify.ai &bull; Carnegie Jelly University
-        </div>
-        <div class="fish_desc_3" style="margin-bottom: 45px;">
-          Sanfran Jose, Sealicon Valley &bull; 500+
-        </div>
+        <div class="fish_text">
 
-      </div>
+            <div class="fish_name_2">
+                Dolphin
+            </div>
+            <div class="fish_desc_2">
+                Software Engineer at Foogle
+            </div>
+            <div class="fish_desc_3">
+                Foogle &bull; Carnegie Jelly University
+            </div>
+            <div class="fish_desc_3" style="margin-bottom: 45px;">
+                Fountain View, Sealicon Valley &bull; 500+
+            </div>
+
+        </div>
     </div>
 
     <div class="fish_ll" style="margin-top: 80px;">
-      <div class="rounded_image_container">
-      <div class="rounded_image" id="rounded_shark">
-      </div>
+        <div class="rounded_image_container">
+
+            <div class="flip-container">
+                <div class="flipper" onclick="this.classList.toggle('flipped')">
+                    <div class="rounded_image front" id="rounded_narwhal">
+                    </div>
+                    <div class="rounded_image back" id="rounded_narwhal_back">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="fish_text">
+
+            <div class="fish_name_2">
+                Narwhal
+            </div>
+            <div class="fish_desc_2">
+                Cofounder, CEO at Fintechify.ai
+            </div>
+            <div class="fish_desc_3">
+                Fintechify.ai &bull; Carnegie Jelly University
+            </div>
+            <div class="fish_desc_3" style="margin-bottom: 45px;">
+                Sanfran Jose, Sealicon Valley &bull; 500+
+            </div>
+
+        </div>
     </div>
-      <div class="fish_text">
 
-        <div class="fish_name_2">
-          Shark
-        </div>
-        <div class="fish_desc_2">
-          Cofounder, General Partner at Coral Capital
-        </div>
-        <div class="fish_desc_3">
-          Coral Capital &bull; Harbour Business School
-        </div>
-        <div class="fish_desc_3" style="margin-bottom: 45px;">
-          Palo Orca, Sealicon Valley &bull; 5000+
-        </div>
+    <div class="fish_ll" style="margin-top: 80px;">
+        <div class="rounded_image_container">
 
-      </div>
+            <div class="flip-container">
+                <div class="flipper" onclick="this.classList.toggle('flipped')">
+                    <div class="rounded_image front" id="rounded_shark">
+                    </div>
+                    <div class="rounded_image back" id="rounded_shark_back">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="fish_text">
+
+            <div class="fish_name_2">
+                Shark
+            </div>
+            <div class="fish_desc_2">
+                Cofounder, General Partner at Coral Capital
+            </div>
+            <div class="fish_desc_3">
+                Coral Capital &bull; Harbour Business School
+            </div>
+            <div class="fish_desc_3" style="margin-bottom: 45px;">
+                Palo Orca, Sealicon Valley &bull; 5000+
+            </div>
+
+        </div>
     </div>
 
     <div class="fish_ll" style="margin-top: 80px;margin-bottom:50px;">
-      <div class="rounded_image_container">
-      <div class="rounded_image" id="rounded_bubble">
-      </div>
-    </div>
-      <div class="fish_text">
+        <div class="rounded_image_container">
 
-        <div class="fish_name_2">
-          Bubble
-        </div>
-        <div class="fish_desc_2">
-          Intern at Foogle
-        </div>
-        <div class="fish_desc_3">
-          Foogle &bull; Carnegie Jelly University
-        </div>
-        <div class="fish_desc_3" style="margin-bottom: 45px;">
-          Fountain View, Sealicon Valley &bull; 200+
-        </div>
-
-      </div>
-    </div>
-
-<!--
-    <div class="fish_container2">
-
-      <div class="fish_item">
-        <div class="fish_icon">
-          <img src="{{base}}/assets/octopus2.png" />
-        </div>
-        <div class="fish_content">
-
-          <div class="fish_name">
-            Octopus
-          </div>
-          <div class="fish_title">
-            (Designer)
-          </div>
-          <div class="fish_desc">
-          Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-          <br/><br/>
-          Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-          </div>
-        </div>
-
-      </div>
-
-
-
-        <div class="fish_item">
-          <div class="fish_icon">
-            <img src="{{base}}/assets/dolphin2.png" />
-          </div>
-          <div class="fish_content">
-
-            <div class="fish_name">
-              Dolphin
-            </div>
-            <div class="fish_title">
-              (Engineer)
-            </div>
-            <div class="fish_desc">
-            Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-            <br/><br/>
-            Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-            </div>
-          </div>
-
-        </div>
-
-
-
-          <div class="fish_item">
-            <div class="fish_icon">
-              <img src="{{base}}/assets/shark2.png" />
-            </div>
-            <div class="fish_content">
-
-              <div class="fish_name">
-                Shark
-              </div>
-              <div class="fish_title">
-                (Investor)
-              </div>
-              <div class="fish_desc">
-              Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-              <br/><br/>
-              Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-              </div>
-            </div>
-
-          </div>
-
-
-
-            <div class="fish_item">
-              <div class="fish_icon">
-                <img src="{{base}}/assets/narwhal2.png" />
-              </div>
-              <div class="fish_content">
-
-                <div class="fish_name">
-                  Narwhal
+            <div class="flip-container">
+                <div class="flipper" onclick="this.classList.toggle('flipped')">
+                    <div class="rounded_image front" id="rounded_bubble">
+                    </div>
+                    <div class="rounded_image back" id="rounded_bubble_back">
+                    </div>
                 </div>
-                <div class="fish_title">
-                  (Startup Founder)
-                </div>
-                <div class="fish_desc">
-                Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-                <br/><br/>
-                Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-                </div>
-              </div>
+            </div>
+        </div>
+        <div class="fish_text">
 
+            <div class="fish_name_2">
+                Bubble
+            </div>
+            <div class="fish_desc_2">
+                Intern at Foogle
+            </div>
+            <div class="fish_desc_3">
+                Foogle &bull; Carnegie Jelly University
+            </div>
+            <div class="fish_desc_3" style="margin-bottom: 45px;">
+                Fountain View, Sealicon Valley &bull; 200+
             </div>
 
-
-
-              <div class="fish_item">
-                <div class="fish_icon">
-                  <img src="{{base}}/assets/bubble2.png" />
-                </div>
-                <div class="fish_content">
-
-                  <div class="fish_name">
-                    Bubble
-                  </div>
-                  <div class="fish_title">
-                    (Intern)
-                  </div>
-                  <div class="fish_desc">
-                  Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-                  <br/><br/>
-                  Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-                  </div>
-                </div>
-
-              </div>
-    </div>
-  -->
-<!--
-
-    <div class="fish_container">
-        <div class="fish_img" id="octopus">
-          <img src="{{base}}/assets/octopus2.png" />
-        </div>
-        <div class="fish_img" id="dolphin">
-          <img src="{{base}}/assets/dolphin2.png" />
-        </div>
-        <div class="fish_img" id="narwhal">
-          <img src="{{base}}/assets/narwhal2.png" />
-        </div>
-        <div class="fish_img" id="shark">
-          <img src="{{base}}/assets/shark2.png" />
-        </div>
-        <div class="fish_img" id="bubble">
-          <img src="{{base}}/assets/bubble2.png" />
         </div>
     </div>
-    <div class="fish_text_container">
-      <div class="fish_info">
-        <div class="fish_name">
-          Narwhal
-        </div>
-        <div class="fish_title">
-          (Startup Founder)
-        </div>
-        <div class="fish_desc">
-        Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
-<br/><br/>
-        Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
-        </div>
-      </div>
-    </div>
-  -->
 
     {% include footer.html %}
 </body>
