fix footer covering part of the content

--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -10,6 +10,7 @@
 
 <body>
     {% include header.html %}
+    <div class="characters_container">
     <div class="fish_ll" style="margin-top: 80px;">
         <div class="rounded_image_container">
 
@@ -116,7 +117,7 @@
         <div class="fish_text">
 
             <div class="fish_name_2">
-                Shark
+                Sharkasdasd
             </div>
             <div class="fish_desc_2">
                 Cofounder, General Partner at Coral Capital
@@ -160,6 +161,7 @@
 
         </div>
     </div>
+  </div>
 
     {% include footer.html %}
 </body>
