--- a/assets/800.css
+++ b/assets/800.css
@@ -112,7 +112,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer5.png");
-     background-position: 70% center; 
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -230,6 +230,23 @@
 }
 
 .menu_header_text {
+    font-weight:lighter;
+    font-size: 16px;
+    text-decoration: none;
+    color: #c5e3ff;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    display: table-cell;
+    vertical-align: middle;
+    text-transform:uppercase;
+    letter-spacing: 2px;
+    min-height: 100% !important;
+    height: 100%;
+}
+
+.menu_header_text_current {
     font-weight: 900;
     font-size: 16px;
     text-decoration: none;
@@ -245,6 +262,12 @@
     min-height: 100% !important;
     height: 100%;
 }
+
+.menu_header_text:hover {
+  font-weight: 900;
+  color:white;
+}
+
 
 .menu_header_text_underline {
     width: 100%;
@@ -274,6 +297,9 @@
     .menu_header_text {
         display: none;
     }
+        .menu_header_text_current {
+            display: none;
+        }
     .burger {
         float: right;
         display: inline-block;
