fix header auto stretch

--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -13,18 +13,13 @@
         <div class="header_bar">
             <div class="logo_header_bar">
                 <a href="{{base}}">
-                    <div class="header_logo">
-                    </div>
+                  <img class="header_logo" src="{{base}}/assets/logo.png">
                 </a>
             </div>
             <div id="social_container_small">
-                <a href="https://www.instagram.com/sealiconvalley/">
-                    <div class="social_img_small">
-                    </div>
+                <a class="social_img_small" href="https://www.instagram.com/sealiconvalley/">
                 </a>
-                <a href="https://www.facebook.com/sealiconvalley/">
-                    <div class="social_img_small">
-                    </div>
+                <a class="social_img_small" href="https://www.facebook.com/sealiconvalley/">
                 </a>
                 <div class="social_img_small">
                 </div>
