Revert "fix header auto stretch"
This reverts commit e151f9238df63b9ca7a660f5171792e5842ac2ab.

--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -13,13 +13,18 @@
         <div class="header_bar">
             <div class="logo_header_bar">
                 <a href="{{base}}">
-                  <img class="header_logo" src="{{base}}/assets/logo.png">
+                    <div class="header_logo">
+                    </div>
                 </a>
             </div>
             <div id="social_container_small">
-                <a class="social_img_small" href="https://www.instagram.com/sealiconvalley/">
+                <a href="https://www.instagram.com/sealiconvalley/">
+                    <div class="social_img_small">
+                    </div>
                 </a>
-                <a class="social_img_small" href="https://www.facebook.com/sealiconvalley/">
+                <a href="https://www.facebook.com/sealiconvalley/">
+                    <div class="social_img_small">
+                    </div>
                 </a>
                 <div class="social_img_small">
                 </div>
