add first comic. change icons. add social media links and icons

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,7 @@
                 Hi there!
             </div>
             <div class="about_content">
-                Welcome to Sealicon Valley! Here we can dive into this ordinary yet exciting world together, by following the life journey of our FINtastic friends. <br/><br/>
+                Welcome to Sealicon Valley! Here we can dive into this ordinary yet exciting world of Sealicon Valley together, by following the life journey of our FINtastic friends. <br/><br/>
                 The original stories and drawings of Sealicon Valley are created by Mita and Ann. We are engineer and designer at Google. The place we live in is a lot like Sealicon Valley,
                 where we swim from far away here, to dream big together, help each other, learn from failure, and enjoy the fast WiFi and free tshirts.
                 <br/><br/>
