--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,20 +72,20 @@
 
             <div class="post_share_social_container">
                 <a href="https://www.instagram.com/sealiconvalley/">
-                    <div class="social_img">
-                      
-                    </div>
-                </a>
-                <a href="javascript:void(0)" onclick="sharePost(1)">
-                    <div class="social_img">
+                    <div class="social_img ig_grey">
 
                     </div>
                 </a>
-                <div class="social_img">
+                <a href="javascript:void(0)" onclick="sharePost(1)">
+                    <div class="social_img fb_grey">
+
+                    </div>
+                </a>
+                <div class="social_img twitter_grey">
                 </div>
-                <div class="social_img">
+                <div class="social_img snap_grey">
                 </div>
-                <div class="social_img">
+                <div class="social_img tumblr_grey">
                 </div>
             </div>
 
