--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 
 <body>
 
-{% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' %}
+{% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' or page.url contains '/comic/' or page.url contains '/blog/' %}
 
 
     <div class="header_box_small">
@@ -25,20 +25,26 @@
         </div>
       </a>
         <div id="social_container">
-            <a href="https://www.instagram.com/sealiconvalley/">
-                <div class="social_img">
+            <a href="https://www.instagram.com/sealiconvalley/" target="_blank">
+                <div class="social_img social_ig">
                 </div>
             </a>
-            <a href="https://www.facebook.com/sealiconvalley/">
-                <div class="social_img">
+            <a href="https://www.facebook.com/sealiconvalley/" target="_blank">
+                <div class="social_img social_fb">
                 </div>
             </a>
-            <div class="social_img">
+            <a href="https://twitter.com/sealiconvalley" target="_blank">
+            <div class="social_img social_twitter">
             </div>
-            <div class="social_img">
+          </a>
+          <a href="https://www.snapchat.com/add/sealiconvalley" target="_blank">
+            <div class="social_img social_snap">
             </div>
-            <div class="social_img">
+          </a>
+            <a href="http://sealiconvalley.tumblr.com/" target="_blank">
+            <div class="social_img social_tumblr">
             </div>
+          </a>
         </div>
         <div class="layer1">
         </div>
