--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -11,7 +11,7 @@
 
     <div class="header_bar_container">
         <div class="header_bar">
-          {% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' %}
+          {% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' or page.url contains '/comic/' or page.url contains '/blog/' %}
             <div class="logo_header_bar">
                 <a href="{{base}}">
                     <div class="header_logo">
@@ -19,20 +19,26 @@
                 </a>
             </div>
             <div class="social_container_small">
-                <a href="https://www.instagram.com/sealiconvalley/">
-                    <div class="social_img_small">
+                <a href="https://www.instagram.com/sealiconvalley/" target="_blank">
+                    <div class="social_img_small social_ig">
                     </div>
                 </a>
-                <a href="https://www.facebook.com/sealiconvalley/">
-                    <div class="social_img_small">
+                <a href="https://www.facebook.com/sealiconvalley/" target="_blank">
+                    <div class="social_img_small social_fb">
                     </div>
                 </a>
-                <div class="social_img_small">
+                <a href="https://twitter.com/sealiconvalley" target="_blank">
+                <div class="social_img_small social_twitter">
                 </div>
-                <div class="social_img_small">
+              </a>
+              <a href="https://www.snapchat.com/add/sealiconvalley" target="_blank">
+                <div class="social_img_small social_snap">
                 </div>
-                <div class="social_img_small">
+              </a>
+                <a href="http://sealiconvalley.tumblr.com/">
+                <div class="social_img_small social_tumblr" target="_blank">
                 </div>
+              </a>
             </div>
             {% else %}
             <div class="logo_header_bar home_logo_header_bar">
@@ -41,21 +47,28 @@
                     </div>
                 </a>
             </div>
+
             <div class="social_container_small home_social_container_small">
-                <a href="https://www.instagram.com/sealiconvalley/">
-                    <div class="social_img_small">
+                <a href="https://www.instagram.com/sealiconvalley/" target="_blank">
+                    <div class="social_img_small social_ig">
                     </div>
                 </a>
-                <a href="https://www.facebook.com/sealiconvalley/">
-                    <div class="social_img_small">
+                <a href="https://www.facebook.com/sealiconvalley/" target="_blank">
+                    <div class="social_img_small social_fb">
                     </div>
                 </a>
-                <div class="social_img_small">
+                <a href="https://twitter.com/sealiconvalley" target="_blank">
+                <div class="social_img_small social_twitter">
                 </div>
-                <div class="social_img_small">
+              </a>
+              <a href="https://www.snapchat.com/add/sealiconvalley" target="_blank">
+                <div class="social_img_small social_snap">
                 </div>
-                <div class="social_img_small">
+              </a>
+                <a href="http://sealiconvalley.tumblr.com/" target="_blank">
+                <div class="social_img_small social_tumblr">
                 </div>
+              </a>
             </div>
             {% endif %}
             <div class="menu_header_bar">
