add twitter sharing

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,9 @@
                     window.open('http://www.facebook.com/sharer.php?s=100&p[title]=' + '{{ page.title }}' + '&p[summary]=' + 'rawr  raw ra r' + '&p[url]=' + url + '&p[images][0]=' + '{{ page.comic }}', 'sharer', 'top=' +
                         winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
                     break;
+                case 2:
+                    window.open('https://twitter.com/intent/tweet?text='+'{{ page.title }} '+ url + '&hashtags=sealiconvalley');
+                    break;
             }
         }
     </script>
@@ -81,8 +84,11 @@
 
                     </div>
                 </a>
+                <a href="javascript:void(0)" onclick="sharePost(2)">
+                <!--<a href="https://twitter.com/intent/tweet?text="+"{{ page.title }}">-->
                 <div class="social_img twitter_grey">
                 </div>
+              </a>
                 <div class="social_img snap_grey">
                 </div>
                 <div class="social_img tumblr_grey">
