--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,8 +11,11 @@
 
     {% include header.html %}
     <div class="about_container">
+      <img class="about_pic" src="{{base}}/assets/annmita.png" />
+      <!--
         <div class="about_pic">
         </div>
+      -->
 
         <div class="about_text">
             <div class="about_title">
