--- a/assets/800.css
+++ b/assets/800.css
@@ -198,6 +198,12 @@
     background: transparent;
     position: absolute;
     vertical-align: middle;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
 }
 
 .logo_header_bar {
@@ -228,7 +234,7 @@
     z-index: 100;
     position: absolute;
     top: 50%;
-    left: 290px;
+    left: 310px;
     transform: translate(0%, -50%);
     min-width: 400px;
 }
@@ -295,7 +301,7 @@
   }
 
   .social_container_small {
-    left: 210px;
+    left: 230px;
     width: 140px;
     max-width: 190px;
   }
