remove head.html from header and header_bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-    {% include head.html %}
+    <!--{% include head.html %}-->
 
 </head>
 
