--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -120,7 +120,7 @@
                 Shark
             </div>
             <div class="fish_desc_2">
-                Cofounder, General Partner at Coral Capital
+                Cofounder, General Partner at SeCoral Capital
             </div>
             <div class="fish_desc_3">
                 Coral Capital &bull; Harbour Business School
