--- a/assets/main.css
+++ b/assets/main.css
@@ -452,6 +452,11 @@ body {
     max-height: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
+
+    border: 1px solid #FFF;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .post_container p {
