--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,24 +6,145 @@
 <head>
     <!--{% include head.html %}-->
 
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+        /* Set the width of the side navigation to 0 */
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+
+    <style>
+        /* The side navigation menu */
+
+        .sidenav {
+            height: 100%;
+            /* 100% Full-height */
+            width: 0;
+            /* 0 width - change this with JavaScript */
+            position: fixed;
+            /* Stay in place */
+            z-index: 100000000;
+            /* Stay on top */
+            top: 0;
+            right: 0;
+            overflow-x: hidden;
+            /* Disable horizontal scroll */
+            /* Place content 60px from the top */
+            transition: 0.2s;
+            /* 0.5 second transition effect to slide in the sidenav */
+            background-color: white;
+            display: flex;
+            flex-flow: column;
+        }
+        /* Position and style the close button (top right corner) */
+
+        .nav_item {
+          width: 100%;
+          height:40px;
+          display: flex;
+          align-items: center;
+          font-family: 'Open Sans', sans-serif;
+
+              font-weight: lighter;
+              font-size: 16px;
+              text-decoration: none;
+              color:black;
+
+              text-transform: uppercase;
+              letter-spacing: 2px;
+              justify-content: space-around;
+        }
+
+        .nav_item > img {
+          width: 30px;
+          height:30px;
+        }
+
+        .nav_item .nav_label {
+          width: 150px;
+          height:100%;
+          text-align: center;
+          display: flex;
+          align-items: center;
+        }
+    </style>
+
 </head>
 
 <body>
 
-{% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' or page.url contains '/comic/' or page.url contains '/blog/' %}
 
 
-    <div class="header_box_small">
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" onclick="closeNav()">
+
+            <div class="nav_item">
+          &times;
+        </div>
+        </a>
+        <a href="{{base}}">
+          <div class="nav_item">
+            <img src="{{base}}/assets/home.png" />
+            <div class="nav_label">
+          Comic
+        </div>
+        </div>
+    </a>
+        <a href="{{base}}/blog.html">
+          <div class="nav_item">
+            <img src="{{base}}/assets/blog.png" />
+            <div class="nav_label">
+          Blog
+        </div>
+        </div
+       </a>
+        <a href="{{base}}/characters.html">
+          <div class="nav_item">
+            <img src="{{base}}/assets/chars.png" />
+
+            <div class="nav_label">
+          Characters
+        </div>
+        </div
+       </a>
+        <a href="{{base}}/about.html">
+          <div class="nav_item">
+            <img src="{{base}}/assets/about.png" />
+            <div class="nav_label">
+          About
+        </div>
+        </div
+       </a>
+    </div>
+
+    {% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' or page.url contains '/comic/' or page.url contains '/blog/' %}
+
+
+    <div class="header_box_small" id="other_page_header_box_small">
         {% include header_bar.html %}
     </div>
 
-{% else %}
+    <div class="header_box_small" id="header_box_small_home">
+        <div class="mobile_header_bar">
+            <div class="itemcenter">
+                <img class="logologo" src="{{base}}/assets/logo.png" />
+            </div>
+            <div class="itemright" onclick="openNav()">
+                <img class="burger" src="{{base}}/assets/burger.png" />
+            </div>
+        </div>
+    </div>
+
+    {% else %}
     <div class="header_box">
         {% include header_bar.html %}
         <a href="{{base}}">
-        <div class="logo">
-        </div>
-      </a>
+            <div class="logo">
+            </div>
+        </a>
         <div id="social_container">
             <a href="https://www.instagram.com/sealiconvalley/" target="_blank">
                 <div class="social_img social_ig">
@@ -34,36 +155,31 @@
                 </div>
             </a>
             <a href="https://twitter.com/sealiconvalley" target="_blank">
-            <div class="social_img social_twitter">
-            </div>
-          </a>
-          <a href="https://www.snapchat.com/add/sealiconvalley" target="_blank">
-            <div class="social_img social_snap">
-            </div>
-          </a>
+                <div class="social_img social_twitter">
+                </div>
+            </a>
+            <a href="https://www.snapchat.com/add/sealiconvalley" target="_blank">
+                <div class="social_img social_snap">
+                </div>
+            </a>
             <a href="http://sealiconvalley.tumblr.com/" target="_blank">
-            <div class="social_img social_tumblr">
-            </div>
-          </a>
-        </div>
-        <div class="layer1">
-        </div>
-        <div class="layer2">
-        </div>
-        <div class="layer3">
-        </div>
-        <div class="layer4">
-        </div>
-        <div class="layer5">
-        </div>
-        <div class="drone">
+                <div class="social_img social_tumblr">
+                </div>
+            </a>
         </div>
 
     </div>
     <div class="header_box_small" id="header_box_small_home">
-        {% include header_bar.html %}
+        <div class="mobile_header_bar">
+            <div class="itemcenter">
+                <img class="logologo" src="{{base}}/assets/logo.png" />
+            </div>
+            <div class="itemright" onclick="openNav()">
+                <img class="burger" src="{{base}}/assets/burger.png" />
+            </div>
+        </div>
     </div>
-{% endif %}
+    {% endif %}
 
 </body>
 
