remove mobile footer tabs.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -171,9 +171,11 @@
     </div>
     <div class="header_box_small" id="header_box_small_home">
         <div class="mobile_header_bar">
+          <a href="{{base}}">
             <div class="itemcenter">
                 <img class="logologo" src="{{base}}/assets/logo.png" />
             </div>
+          </a>
             <div class="itemright" onclick="openNav()">
                 <img class="burger" src="{{base}}/assets/burger.png" />
             </div>
