make bubble student at sandford

--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -150,13 +150,13 @@
                 Bubble
             </div>
             <div class="fish_desc_2">
-                Intern at Foogle
+                Student at Sandford University
             </div>
             <div class="fish_desc_3">
-                Foogle &bull; Carnegie Jelly University
+                Sandford University
             </div>
             <div class="fish_desc_3" style="margin-bottom: 45px;">
-                Fountain View, Sealicon Valley &bull; 200+
+                Palo Orca, Sealicon Valley &bull; 200+
             </div>
 
         </div>
