change place names

--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -36,7 +36,7 @@
                 Foogle &bull; Boat Island School of Design
             </div>
             <div class="fish_desc_3" style="margin-bottom: 45px;">
-                Sanfran Jose, Sealicon Valley &bull; 500+
+                Sand Francisco, Sealicon Valley &bull; 500+
             </div>
 
         </div>
@@ -96,7 +96,7 @@
                 Fintechify.ai &bull; Carnegie Jelly University
             </div>
             <div class="fish_desc_3" style="margin-bottom: 45px;">
-                Sanfran Jose, Sealicon Valley &bull; 500+
+                Sand Francisco, Sealicon Valley &bull; 500+
             </div>
 
         </div>
@@ -123,10 +123,10 @@
                 Cofounder, General Partner at SeCoral Capital
             </div>
             <div class="fish_desc_3">
-                Coral Capital &bull; Harbour Business School
+                SeCoral Capital &bull; Harbour Business School
             </div>
             <div class="fish_desc_3" style="margin-bottom: 45px;">
-                Palo Orca, Sealicon Valley &bull; 5000+
+                Menlo Carp, Sealicon Valley &bull; 5000+
             </div>
 
         </div>
