--- a/assets/main.css
+++ b/assets/main.css
@@ -162,29 +162,49 @@ body {
         -webkit-column-count: 1;
         column-count: 1;
     }
+    #related_posts_masonry {
+          -moz-column-count: 1;
+          -webkit-column-count: 1;
+          column-count: 1;
+    }
 }
 
 @media only screen and (min-width: 700px) {
     .masonry {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+    #related_posts_masonry {
+          -moz-column-count: 1;
+          -webkit-column-count: 1;
+          column-count: 1;
     }
 }
 
 @media only screen and (min-width: 900px) {
     .masonry {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+    #related_posts_masonry {
+          -moz-column-count: 3;
+          -webkit-column-count: 3;
+          column-count: 3;
     }
 }
 
 @media only screen and (min-width: 1100px) {
     .masonry {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+    #related_posts_masonry {
+          -moz-column-count: 3;
+          -webkit-column-count: 3;
+          column-count: 3;
     }
 }
 
